Added colors manager, chat messages, formatted code

--- a/src/main/resources/assets/weight/default_configuration.properties
+++ b/src/main/resources/assets/weight/default_configuration.properties
@@ -44,3 +44,6 @@ fallDamageWeight=0.1
 
 # Should the player be slowed in creative mode?
 creativeSlowdown=false
+
+# Should chat messages be sent when the player is slowed down?
+chatMessages=true
