Made code more modular, added more comments, added end weight

--- a/src/main/resources/assets/weight/default_configuration.properties
+++ b/src/main/resources/assets/weight/default_configuration.properties
@@ -1,49 +1,58 @@
 # Weight Mod Configuration File
 
 # Slowness multiplier for item weight (default 1)
-slownessMultiplier=1
+slownessMultiplier = 1
 
 # Maximum weight (2 would be twice as slow as normal)
-maxWeight=3
+maxWeight = 3
 
 # Should it decrease the player's breaking speed? (same calculation and multiplier as slowness)
-breakingSpeed=true
+breakingSpeed = true
 
 # Include equipped items in weight calculation (armor/offhand)
-includeEquipped=true
+includeEquipped = true
 
 # Default weight for armor (per piece, equipped or not)
-armorWeight=0.015
+armorWeight = 0.015
 
 # Default weight for tools
-toolWeight=0.005
+toolWeight = 0.005
 
 # Default weight for all other items
-defaultWeight=0.0003
+defaultWeight = 0.0003
 
 # Enable action bar (displays percent speed reduction)
-actionBar=true
+actionBar = true
 
 # Should the player be slowed down by weather? (rain, thunder)
-weatherSlowdown=true
+weatherSlowdown = true
 
 # If weatherSlowdown is enabled, how much should it slow the player down?
-weatherWeight=0.05
+weatherWeight = 0.05
 
 # Should the player be slowed down by the nether?
-netherSlowdown=true
+netherSlowdown = true
 
 # If netherSlowdown is enabled, how much should it slow the player down?
-netherWeight=0.05
+netherWeight = 0.05
+
+# Should the player be slowed down by the end?
+endSlowdown = true
+
+# If endSlowdown is enabled, how much should it slow the player down?
+endWeight = 0.08
 
 # Should the players fall damage be affected by weight?
-fallDamage=true
+fallDamage = true
 
 # If fallDamage is enabled, how much should it be affected by weight? (0.1 would be 10% more damage per weight)
-fallDamageWeight=0.1
+fallDamageWeight = 0.1
 
 # Should the player be slowed in creative mode?
-creativeSlowdown=false
+creativeSlowdown = false
 
 # Should chat messages be sent when the player is slowed down?
-chatMessages=true
+chatMessages = true
+
+# What should the interval for chat messages be (by weight, ex. 25 would be every 25% weight increase)
+chatInterval = 25
